# sdekit

./: .gitignore  README.md  main.py  pyproject.toml
.github/: CODEOWNERS
.zed/: settings.json
src/sdekit/: filtration.py  incrementor.py  simulation.py  util.py
src/sdekit/process/: __init__.py  brownian.py  ito.py  markov.py
