[project]
name = "sdekit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
 "pandas>=2.2.3",
 "scipy>=1.15.2",
]

[project.scripts]
sdekit = "sdekit:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = ["ipykernel>=6.29.5", "plotly>=6.0.1", "ruff>=0.11.5", "snakeviz>=2.2.2"]
